# aiTeamFabrik

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
config/: documentation.yml  factory.yml  factory.yml.example
config/agents/: architect.yml.example  developer.yml.example  meta_reviewer.yml.example  po_agent.yml.example  qa.yml.example  researcher.yml.example  reviewedcodeimplementation.yml.example  reviewer.yml.example  (+1 more)
factory/: __init__.py  main.py
scripts/: create_sprint2_backlog.py  post_wiki.py
tests/: conftest.py  test_api.py  test_architect_feedback.py  test_budget_exceeded_no_consume.py  test_competence.py  test_configure_git.py  test_create_mr_retry.py  test_ensure_git_repo.py  test_fix_mr_pipeline.py  test_git_commit_push.py  test_gitlab_connection.py  test_issue_queue.py  test_label_issue_command.py  test_llm_router.py  test_llm_router_anthropic.py  test_llm_router_budget.py  test_llm_router_ollama.py  test_llm_router_retry.py  test_model_selector.py  test_monitor_command.py  test_monitor_dedup.py  test_monitor_lifecycle.py  test_monitor_pipeline_failure.py  test_orchestrator.py  test_plan_command.py  test_planner.py  test_po_agent.py  test_po_agent_additional.py  test_po_agent_integration.py  test_refine_mr.py  test_resilience.py  test_review.py  test_review_mr.py  test_run_command.py  test_scrum_engine.py  test_status_command.py  test_token_budget.py  test_token_planner.py  test_update_wiki.py  test_update_wiki_additional.py  (+3 more)
(+44 files in other folders)
