[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "softwareteamfabrik"
version = "0.1.0"
description = "Autonomous AI-driven software development factory — CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-gitlab>=4",
    "pyyaml>=6",
    "python-dotenv>=1",
    "filelock>=3.12",
    "fastapi>=0.136",
    "httpx>=0.28",
    "ruamel.yaml>=0.19",
    "requests>=2.28.0",
]

[project.scripts]
factory = "factory.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]
llm = [
    "anthropic>=0.30",
    "mistralai>=1.0",
]
all = [
    "softwareteamfabrik[dev]",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that require a live GitLab instance and real credentials (deselected by default)",
]

[tool.hatch.build.targets.wheel]
packages = ["factory"]
